src/network_policies/authorizationmandatory1fluidos7 Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authorizationmandatory1fluidos7
  namespace: fluidos
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app: resource-monitor
    ports:
    - port: 43
      protocol: TCP
